NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_0_t0_3__c.field-meta.xml
<CustomField>
    <fullName>Approval_0_t0_3__c</fullName>
    <formula>AND( SBQQ__CustomerDiscount__c  &gt;= 0,  SBQQ__CustomerDiscount__c  &lt;= 0.03)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval 0 t0 3</label>
    <type>Checkbox</type>
</CustomField>