NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_queue_notification__c.field-meta.xml
<CustomField>
    <fullName>Approval_queue_notification__c</fullName>
    <formula>AND(Commercial_QUEUE__c, (SBQQ__CustomerDiscount__c &gt; 0.031 &amp;&amp; SBQQ__CustomerDiscount__c &lt;=0.07))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval queue notification</label>
    <type>Checkbox</type>
</CustomField>