NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafeId</label>
    <type>Text</type>
</CustomField>