NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CITIMAX_280_12V_LA_Selected__c.field-meta.xml
<CustomField>
    <fullName>CITIMAX_280_12V_LA_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CITIMAX 280 12V LA Selected</label>
    <type>Checkbox</type>
</CustomField>