NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CITIMAX_400_12_24V_LA__c.field-meta.xml
<CustomField>
    <fullName>CITIMAX_400_12_24V_LA__c</fullName>
    <formula>IF( OR(ISPICKVAL(CTM_Units__c, &quot;CITIMAX 400 12V LA&quot;),ISPICKVAL(CTM_Units__c, &quot;CITIMAX 400 24V LA&quot;)) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CITIMAX 400 12/24V LA</label>
    <type>Checkbox</type>
</CustomField>