NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CITIMAX_400_24V_LA_Selected__c.field-meta.xml
<CustomField>
    <fullName>CITIMAX_400_24V_LA_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CITIMAX 400 24V LA Selected</label>
    <type>Checkbox</type>
</CustomField>