NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CITIMAX_500_12V_LA__c.field-meta.xml
<CustomField>
    <fullName>CITIMAX_500_12V_LA__c</fullName>
    <formula>IF(ISPICKVAL(CTM_Units__c, &apos;CITIMAX 500 12V LA&apos;) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CITIMAX 500 12V LA</label>
    <type>Checkbox</type>
</CustomField>