NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Commercial_QUEUE__c.field-meta.xml
<CustomField>
    <fullName>Commercial_QUEUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial QUEUE</label>
    <type>Checkbox</type>
</CustomField>