NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Competitor_Model_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Model_Price__c</fullName>
    <label>Competitor Model Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>