NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONATINER_3rd_Party_Commission__c.field-meta.xml
<CustomField>
    <fullName>CONATINER_3rd_Party_Commission__c</fullName>
    <label>3rd Party Commission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>