NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Condiciones_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_de_Pago__c</fullName>
    <defaultValue>&quot;Crédito 30 días  con respecto a la fecha de la factura&quot;</defaultValue>
    <label>Condiciones de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>