NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account_Name__c</fullName>
    <description>Container Account Name used for ASO Document generation under Quote template</description>
    <formula>SBQQ__Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>