NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_ASO_Release_Document__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Release_Document__c</fullName>
    <label>ASO Release Document</label>
    <type>Date</type>
</CustomField>