NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_ASO_Rev__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Rev__c</fullName>
    <label>ASO Rev</label>
    <length>1</length>
    <type>Text</type>
</CustomField>