NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_ASO_Revision_Comments__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Revision_Comments__c</fullName>
    <label>ASO Revision Comments</label>
    <type>TextArea</type>
</CustomField>