NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_ASO_Total_Weight_Unit_OptionKG__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Total_Weight_Unit_OptionKG__c</fullName>
    <description>Used for ASO document generation</description>
    <formula>ROUND( CONTAINER_Total_Weight_Unit_Options_Kg__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASO Total Weight Unit Options_kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>