NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_ASO_Total_Weight_Unit_OptionLB__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Total_Weight_Unit_OptionLB__c</fullName>
    <description>Used in ASO document generation</description>
    <formula>ROUND( CONTAINER_Total_Weight_Unit_Options_lb__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASO Total Weight Unit Options lb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>