NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Back_to_Back_end_user__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Back_to_Back_end_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Container Back to Back end user Account</description>
    <label>Back to Back end user</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Back to Back end user)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>