NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Box_Manufacturer_3__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Box_Manufacturer_3__c</fullName>
    <description>Container Competitor Three Box Manufacturer</description>
    <label>Box Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIMC</fullName>
            </value>
            <value>
                <fullName>MCI</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Singamas</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>