NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Build_Form__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Build_Form__c</fullName>
    <label>Build Form</label>
    <length>50</length>
    <type>Text</type>
</CustomField>