NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Bundle_Count__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Bundle_Count__c</fullName>
    <description>Field used to get the count of the bundle products.</description>
    <label>Bundle Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>