NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Check_if_Pending_Job_status__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Check_if_Pending_Job_status__c</fullName>
    <label>Check if Pending Job# status</label>
    <length>48</length>
    <type>Text</type>
</CustomField>