NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Child_Quote__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Child_Quote__c</fullName>
    <label>Child Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>