NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Container_Commissioning_WO_Comments__c.field-meta.xml
<CustomField>
    <fullName>Container_Commissioning_WO_Comments__c</fullName>
    <label>Commissioning Work Order Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>