NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Commissioning_Work_Order_Info__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Work_Order_Info__c</fullName>
    <label>Commissioning Work Order Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>