NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Competitor_Contract_price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Competitor_Contract_price__c</fullName>
    <description>Container Competitor One Contract Price</description>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>