NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Competitor_Model_2__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Competitor_Model_2__c</fullName>
    <description>Container Competitor Two Model</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>