NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Competitor_Name_3__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Competitor_Name_3__c</fullName>
    <description>Container Competitor Three Name</description>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daikin</fullName>
            </value>
            <value>
                <fullName>Thermoking</fullName>
            </value>
            <value>
                <fullName>Taylor</fullName>
            </value>
            <value>
                <fullName>CIMC</fullName>
            </value>
            <value>
                <fullName>Star Cool</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>