NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Competitor_Order_Date_2__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Competitor_Order_Date_2__c</fullName>
    <description>Container Competitor Two Order Date</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>