NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Concessions_Comments_3__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Concessions_Comments_3__c</fullName>
    <description>Container Competitor Three Concessions(Comments)</description>
    <label>Concessions(Comments)</label>
    <type>TextArea</type>
</CustomField>