NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Address__c</fullName>
    <description>Container Contact Address</description>
    <formula>CONTAINER_Contact_Name__r.MailingStreet &amp; &apos; &apos; &amp; CONTAINER_Contact_Name__r.MailingCity &amp; &apos; &apos; &amp; CONTAINER_Contact_Name__r.MailingState &amp; &apos; &apos; &amp; CONTAINER_Contact_Name__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>