NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Email__c</fullName>
    <description>Container Contact Email</description>
    <formula>CONTAINER_Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>