NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Contact Name)</relationshipLabel>
    <relationshipName>CONTAINER_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>