NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Phone__c</fullName>
    <description>Container Contact Phone</description>
    <formula>CONTAINER_Contact_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>