NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contract_No__c</fullName>
    <label>Contract No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>