NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contract_Obligations__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contract_Obligations__c</fullName>
    <label>Contract Obligations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>