NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Contract_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contract_Special_Terms__c</fullName>
    <description>Container Contract Special Terms</description>
    <label>Contract Special Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>