NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Certification__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Certification__c</fullName>
    <label>Cost Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>