NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Correction_Fx__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Correction_Fx__c</fullName>
    <label>Cost Correction Fx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>