NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_CorrectionFx__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_CorrectionFx__c</fullName>
    <description>Container Cost Correction Fx</description>
    <label>Cost Correction Fx</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>