NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Freight__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Freight__c</fullName>
    <label>Cost Freight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>