NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Gross_Margin_w_Warranty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Gross_Margin_w_Warranty__c</fullName>
    <label>Cost Gross Margin w/ Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>