NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Net__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Net__c</fullName>
    <label>Cost Net</label>
    <length>255</length>
    <type>Text</type>
</CustomField>