NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Spare_Pasts__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Spare_Pasts__c</fullName>
    <label>Cost Spare Pasts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>