NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Cost_Special_Requirement__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Special_Requirement__c</fullName>
    <label>Special Requirement Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>