NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Created__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Created__c</fullName>
    <label>Created</label>
    <type>Date</type>
</CustomField>