NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Customer_Common_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Common_Name__c</fullName>
    <description>Parent Account Name</description>
    <formula>NATT_Parent_Account_Name__c</formula>
    <label>Customer Common Name</label>
    <type>Text</type>
</CustomField>