NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock SING</fullName>
            </value>
            <value>
                <fullName>Stock ATHENS</fullName>
            </value>
            <value>
                <fullName>Cost PID quote</fullName>
            </value>
            <value>
                <fullName>Planning products spec quotes</fullName>
            </value>
            <value>
                <fullName>CTD Engineering quote</fullName>
            </value>
            <value>
                <fullName>CTPL</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>PPS</fullName>
            </value>
            <value>
                <fullName>Internal Sales</fullName>
            </value>
            <value>
                <fullName>Internal - Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>