NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Datacordor_Config_Option__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Datacordor_Config_Option__c</fullName>
    <label>Datacordor Config Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>