NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_DomainName__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DomainName__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
    <label>CONTAINER_DomainName</label>
    <type>Text</type>
</CustomField>