NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_End_user_for_lease__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_End_user_for_lease__c</fullName>
    <description>Container End user for lease</description>
    <label>End user for lease</label>
    <length>255</length>
    <type>Text</type>
</CustomField>