NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_End_user_Qty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_End_user_Qty__c</fullName>
    <description>Container Sales End user Qty</description>
    <label>End user Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>