NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Estimated_ship_date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Estimated_ship_date__c</fullName>
    <description>Container Estimated ship date</description>
    <label>Estimated ship date</label>
    <type>Date</type>
</CustomField>