NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Extended_Warranty_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Extended_Warranty_Cost__c</fullName>
    <description>Container Extended Warranty Cost</description>
    <label>Extended Warranty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>