NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Extended_Warranty_LNBaaN__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Extended_Warranty_LNBaaN__c</fullName>
    <label>Extended Warranty LNBaaN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>